--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.18.6",
     "babel-jest": "^29.3.1",
+    "tsd": "^0.25.0",
     "typescript": "^4.9.3"
   },
   "dependencies": {
